source3/smbd/smb2_process.c
@@ -1644,7 +1644,7 @@ static void smbd_sig_hup_handler(struct tevent_context *ev,
 		struct smbd_server_connection);
 
 	change_to_root_user();
-	DEBUG(1,("Reloading services after SIGHUP\n"));
+	DBG_NOTICE("Reloading services after SIGHUP\n");
 	reload_services(sconn, conn_snum_used, false);
 }
 
